build/log/idf_py_stdout_output_14689
Command: ninja flash
[1/16] Linking C static library esp-idf/fatfs/libfatfs.a
[2/16] Linking C static library esp-idf/json/libjson.a
[3/16] Linking C static library esp-idf/mqtt/libmqtt.a
[4/16] Linking C static library esp-idf/spiffs/libspiffs.a
[5/16] Building C object esp-idf/COMMS/CMakeFiles/__idf_COMMS.dir/packet.c.obj
FAILED: esp-idf/COMMS/CMakeFiles/__idf_COMMS.dir/packet.c.obj 
/home/nolan/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/nolan/ECE494-MUR/system_monitor/build/config -I/home/nolan/ECE494-MUR/system_monitor/tasks/COMMS/include -I/home/nolan/esp/esp-idf/components/newlib/platform_include -I/home/nolan/esp/esp-idf/components/freertos/config/include -I/home/nolan/esp/esp-idf/components/freertos/config/include/freertos -I/home/nolan/esp/esp-idf/components/freertos/config/xtensa/include -I/home/nolan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/nolan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/nolan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/nolan/esp/esp-idf/components/freertos/esp_additions/include -I/home/nolan/esp/esp-idf/components/esp_hw_support/include -I/home/nolan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/nolan/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/nolan/esp/esp-idf/components/esp_hw_support/dma/include -I/home/nolan/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/nolan/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/nolan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/nolan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/nolan/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/nolan/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/nolan/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/nolan/esp/esp-idf/components/heap/include -I/home/nolan/esp/esp-idf/components/heap/tlsf -I/home/nolan/esp/esp-idf/components/log/include -I/home/nolan/esp/esp-idf/components/soc/include -I/home/nolan/esp/esp-idf/components/soc/esp32 -I/home/nolan/esp/esp-idf/components/soc/esp32/include -I/home/nolan/esp/esp-idf/components/soc/esp32/register -I/home/nolan/esp/esp-idf/components/hal/platform_port/include -I/home/nolan/esp/esp-idf/components/hal/esp32/include -I/home/nolan/esp/esp-idf/components/hal/include -I/home/nolan/esp/esp-idf/components/esp_rom/include -I/home/nolan/esp/esp-idf/components/esp_rom/esp32/include -I/home/nolan/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/nolan/esp/esp-idf/components/esp_rom/esp32 -I/home/nolan/esp/esp-idf/components/esp_common/include -I/home/nolan/esp/esp-idf/components/esp_system/include -I/home/nolan/esp/esp-idf/components/esp_system/port/soc -I/home/nolan/esp/esp-idf/components/esp_system/port/include/private -I/home/nolan/esp/esp-idf/components/xtensa/esp32/include -I/home/nolan/esp/esp-idf/components/xtensa/include -I/home/nolan/esp/esp-idf/components/xtensa/deprecated_include -I/home/nolan/esp/esp-idf/components/lwip/include -I/home/nolan/esp/esp-idf/components/lwip/include/apps -I/home/nolan/esp/esp-idf/components/lwip/include/apps/sntp -I/home/nolan/esp/esp-idf/components/lwip/lwip/src/include -I/home/nolan/esp/esp-idf/components/lwip/port/include -I/home/nolan/esp/esp-idf/components/lwip/port/freertos/include -I/home/nolan/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/nolan/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/nolan/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/nolan/esp/esp-idf/components/esp_driver_spi/include -I/home/nolan/esp/esp-idf/components/esp_pm/include -I/home/nolan/ECE494-MUR/system_monitor/sys_common/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/nolan/ECE494-MUR/system_monitor=. -fmacro-prefix-map=/home/nolan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/COMMS/CMakeFiles/__idf_COMMS.dir/packet.c.obj -MF esp-idf/COMMS/CMakeFiles/__idf_COMMS.dir/packet.c.obj.d -o esp-idf/COMMS/CMakeFiles/__idf_COMMS.dir/packet.c.obj -c /home/nolan/ECE494-MUR/system_monitor/tasks/COMMS/packet.c
/home/nolan/ECE494-MUR/system_monitor/tasks/COMMS/packet.c: In function 'transfer_packet':
/home/nolan/ECE494-MUR/system_monitor/tasks/COMMS/packet.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: some warnings being treated as errors
[6/16] Linking C static library esp-idf/wifi_provisioning/libwifi_provisioning.a
[7/16] Performing build step for 'bootloader'
[1/1] cd /home/nolan/ECE494-MUR/system_monitor/build/bootloader/esp-idf/esptool_py && /home/nolan/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/nolan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/nolan/ECE494-MUR/system_monitor/build/bootloader/bootloader.bin
Bootloader binary size 0x6630 bytes. 0x9d0 bytes (9%) free.
ninja: build stopped: subcommand failed.
